// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /flight-log Get flight log with Id should return a single row when data is present for the given Id 1`] = `
{
  "acTotalFlightTime": "170:30",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2LastName": "Nieminen",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 45,
  "invoiceNumber": "INV001",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "PAID",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`GET /flight-log should allow query parameters to be optional 1`] = `
{
  "acTotalFlightTime": "170:30",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "PAID",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should only return data for the logged in user when not admin 1`] = `
{
  "acTotalFlightTime": "170:30",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "PAID",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return 200 for Start Date with time offset 1`] = `
{
  "acTotalFlightTime": "170:30",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "PAID",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return 200 with valid query params 1`] = `
{
  "acTotalFlightTime": "170:30",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "PAID",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return all data for ac when user is admin 1`] = `
[
  {
    "acTotalFlightTime": "168:45",
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Sanna1",
    "blockTime": "02:05",
    "crew2LastName": "Seppälä",
    "departureAirport": "EFHK",
    "flightId": "eject",
    "flightTime": "01:45",
    "flightType": "MAT",
    "fuelRemainingLitres": 60,
    "fuelUpliftLitres": 45,
    "instrumentFlyingMins": 60,
    "isBillableFlight": true,
    "landingTimeUtc": "2024-03-12T01:00:00.000Z",
    "nightFlyingMins": 115,
    "numberOfLandings": 1,
    "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Koskinen",
    "status": "INVOICED",
    "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
    "totalTimeInService": 1.92,
  },
  {
    "acTotalFlightTime": "170:30",
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockTime": "02:15",
    "crew2LastName": "Nieminen",
    "departureAirport": "EFHK",
    "flightId": "mikify",
    "flightTime": "01:45",
    "flightType": "KOU",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": 50,
    "instrumentFlyingMins": 45,
    "isBillableFlight": true,
    "landingTimeUtc": "2025-03-01T10:00:00.000Z",
    "nightFlyingMins": 30,
    "numberOfLandings": 1,
    "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
    "oilUpliftLitres": 1.5,
    "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Korhonen",
    "status": "PAID",
    "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
    "totalTimeInService": 2,
  },
  {
    "acTotalFlightTime": "172:00",
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Pekka1",
    "blockTime": "02:12",
    "crew2LastName": "Heikkinen",
    "departureAirport": "EFHK",
    "flightId": "bLwnAstr0",
    "flightTime": "01:30",
    "flightType": "TAR",
    "fuelRemainingLitres": 10,
    "fuelUpliftLitres": 40,
    "instrumentFlyingMins": 30,
    "isBillableFlight": false,
    "landingTimeUtc": "2025-03-03T12:00:00.000Z",
    "nightFlyingMins": 20,
    "numberOfLandings": 1,
    "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Hämäläinen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
    "totalTimeInService": 1.5,
  },
]
`;

exports[`GET /flight-log/totals should return 200 with all ac totals 1`] = `
{
  "acTotalFlightHours": 4783.333333333333,
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbSeqNo": 3,
  "flightLogMinsThisAjlb": 0,
  "flightTimeThisAjlb": "0:00",
  "totalFlightMinsAtAjlbStart": 287000,
  "totalFlightTimeAtAjlbStart": "4783:20",
}
`;

exports[`GET /flight-log/totals should return 200 with valid registration 1`] = `
{
  "acTotalFlightHours": 4783.333333333333,
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbSeqNo": 3,
  "flightLogMinsThisAjlb": 0,
  "flightTimeThisAjlb": "0:00",
  "totalFlightMinsAtAjlbStart": 287000,
  "totalFlightTimeAtAjlbStart": "4783:20",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.admin' ] 1`] = `
{
  "acTotalFlightTime": "172:00",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Pekka1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.admin' ] 2`] = `
{
  "acTotalFlightTime": "172:00",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Pekka1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.user' ] 1`] = `
{
  "acTotalFlightTime": "172:00",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Pekka1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Pekka1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using NaN and [ 'flightlog.user' ] 2`] = `
{
  "acTotalFlightTime": "172:00",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Pekka1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Pekka1",
}
`;
